k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: online-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-frontend
  template:
    metadata:
      labels:
        app: mern-frontend
    spec:
      containers:
        - name: mern-frontend
          image: janithad/mern-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: online-store
spec:
  selector:
    app: mern-frontend
  ports:
    - port: 80
      targetPort: 5173
  type: NodePort
